--- a/bulldozer exploring.ipynb
+++ b/bulldozer exploring.ipynb
@@ -5009,7 +5009,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this variable has so many levels, we don't one hot encode it. "
+    "Since this variable has so many levels, we do not one hot encode it. "
    ]
   },
   {
@@ -5085,7 +5085,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since this variable has so many levels, we don't one hot encode it. "
+    "Since this variable has so many levels, we do not one hot encode it. "
    ]
   },
   {
